deploy: d6838e235b0ff7e060ea56eb1ca27194640f22d6

--- a/cucumber-reports/develop/branch/advanced-reports/cucumber-html-reports/overview-steps.html
+++ b/cucumber-reports/develop/branch/advanced-reports/cucumber-html-reports/overview-steps.html
@@ -76,7 +76,7 @@ $(document).ready(function() {
     <tr class="info">
       <td>Cucumber Reports</td>
         <td>1</td>
-      <td>18 Nov 2021, 17:09</td>
+      <td>24 Nov 2021, 17:35</td>
     </tr>
   </tbody>
 </table>
@@ -116,137 +116,137 @@ $(document).ready(function() {
             <tr>
               <td class="location">BeforeActions.setUp(Scenario)</td>
               <td>1</td>
-              <td class="duration" data-value="3227686828">3.227</td>
-              <td class="duration" data-value="3227686828">3.227</td>
-              <td class="duration" data-value="3227686828">3.227</td>
+              <td class="duration" data-value="1950566623">1.950</td>
+              <td class="duration" data-value="1950566623">1.950</td>
+              <td class="duration" data-value="1950566623">1.950</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.closeTheBigQueryProperties()</td>
               <td>1</td>
-              <td class="duration" data-value="120087879">0.120</td>
-              <td class="duration" data-value="120087879">0.120</td>
-              <td class="duration" data-value="120087879">0.120</td>
+              <td class="duration" data-value="123531957">0.123</td>
+              <td class="duration" data-value="123531957">0.123</td>
+              <td class="duration" data-value="123531957">0.123</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.closeTheGCSProperties()</td>
               <td>1</td>
-              <td class="duration" data-value="152706349">0.152</td>
-              <td class="duration" data-value="152706349">0.152</td>
-              <td class="duration" data-value="152706349">0.152</td>
+              <td class="duration" data-value="151835614">0.151</td>
+              <td class="duration" data-value="151835614">0.151</td>
+              <td class="duration" data-value="151835614">0.151</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.deleteTheTable(String)</td>
               <td>1</td>
-              <td class="duration" data-value="895025646">0.895</td>
-              <td class="duration" data-value="895025646">0.895</td>
-              <td class="duration" data-value="895025646">0.895</td>
-              <td class="passed">100.00%</td>
+              <td class="duration" data-value="146652">0.000</td>
+              <td class="duration" data-value="146652">0.000</td>
+              <td class="duration" data-value="146652">0.000</td>
+              <td class="failed">0.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.enterTheBigQueryPropertiesForTable(String)</td>
               <td>1</td>
-              <td class="duration" data-value="4665673582">4.665</td>
-              <td class="duration" data-value="4665673582">4.665</td>
-              <td class="duration" data-value="4665673582">4.665</td>
+              <td class="duration" data-value="4502880139">4.502</td>
+              <td class="duration" data-value="4502880139">4.502</td>
+              <td class="duration" data-value="4502880139">4.502</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.enterTheGCSPropertiesWithGCSBucket(String)</td>
               <td>1</td>
-              <td class="duration" data-value="16761819401">16.761</td>
-              <td class="duration" data-value="16761819401">16.761</td>
-              <td class="duration" data-value="16761819401">16.761</td>
+              <td class="duration" data-value="16279832258">16.279</td>
+              <td class="duration" data-value="16279832258">16.279</td>
+              <td class="duration" data-value="16279832258">16.279</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.getCountOfNoOfRecordsTransferredToBigQueryIn(String)</td>
               <td>1</td>
-              <td class="duration" data-value="768138406">0.768</td>
-              <td class="duration" data-value="768138406">0.768</td>
-              <td class="duration" data-value="768138406">0.768</td>
-              <td class="passed">100.00%</td>
+              <td class="duration" data-value="191240">0.000</td>
+              <td class="duration" data-value="191240">0.000</td>
+              <td class="duration" data-value="191240">0.000</td>
+              <td class="failed">0.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.linkSourceAndSinkToEstablishConnection()</td>
               <td>1</td>
-              <td class="duration" data-value="2357275900">2.357</td>
-              <td class="duration" data-value="2357275900">2.357</td>
-              <td class="duration" data-value="2357275900">2.357</td>
+              <td class="duration" data-value="2345440695">2.345</td>
+              <td class="duration" data-value="2345440695">2.345</td>
+              <td class="duration" data-value="2345440695">2.345</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.openDatafusionProjectToConfigurePipeline()</td>
               <td>1</td>
-              <td class="duration" data-value="3878402655">3.878</td>
-              <td class="duration" data-value="3878402655">3.878</td>
-              <td class="duration" data-value="3878402655">3.878</td>
+              <td class="duration" data-value="3780981050">3.780</td>
+              <td class="duration" data-value="3780981050">3.780</td>
+              <td class="duration" data-value="3780981050">3.780</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.openLogs()</td>
               <td>1</td>
-              <td class="duration" data-value="459189747">0.459</td>
-              <td class="duration" data-value="459189747">0.459</td>
-              <td class="duration" data-value="459189747">0.459</td>
+              <td class="duration" data-value="458165531">0.458</td>
+              <td class="duration" data-value="458165531">0.458</td>
+              <td class="duration" data-value="458165531">0.458</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.runThePipelineInRuntime()</td>
               <td>1</td>
-              <td class="duration" data-value="3201846502">3.201</td>
-              <td class="duration" data-value="3201846502">3.201</td>
-              <td class="duration" data-value="3201846502">3.201</td>
+              <td class="duration" data-value="3334120407">3.334</td>
+              <td class="duration" data-value="3334120407">3.334</td>
+              <td class="duration" data-value="3334120407">3.334</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.saveAndDeployPipeline()</td>
               <td>1</td>
-              <td class="duration" data-value="3595441967">3.595</td>
-              <td class="duration" data-value="3595441967">3.595</td>
-              <td class="duration" data-value="3595441967">3.595</td>
+              <td class="duration" data-value="3551126843">3.551</td>
+              <td class="duration" data-value="3551126843">3.551</td>
+              <td class="duration" data-value="3551126843">3.551</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.sourceIsGCSBucket()</td>
               <td>1</td>
-              <td class="duration" data-value="214291384">0.214</td>
-              <td class="duration" data-value="214291384">0.214</td>
-              <td class="duration" data-value="214291384">0.214</td>
+              <td class="duration" data-value="189173585">0.189</td>
+              <td class="duration" data-value="189173585">0.189</td>
+              <td class="duration" data-value="189173585">0.189</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.targetIsBigQuery()</td>
               <td>1</td>
-              <td class="duration" data-value="203259805">0.203</td>
-              <td class="duration" data-value="203259805">0.203</td>
-              <td class="duration" data-value="203259805">0.203</td>
+              <td class="duration" data-value="185152314">0.185</td>
+              <td class="duration" data-value="185152314">0.185</td>
+              <td class="duration" data-value="185152314">0.185</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.validateSuccessMessageIsDisplayed()</td>
               <td>1</td>
-              <td class="duration" data-value="27007243">0.027</td>
-              <td class="duration" data-value="27007243">0.027</td>
-              <td class="duration" data-value="27007243">0.027</td>
-              <td class="passed">100.00%</td>
+              <td class="duration" data-value="205574">0.000</td>
+              <td class="duration" data-value="205574">0.000</td>
+              <td class="duration" data-value="205574">0.000</td>
+              <td class="failed">0.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.verifyThePipelineStatusIs(String)</td>
               <td>1</td>
-              <td class="duration" data-value="8653858">0.008</td>
-              <td class="duration" data-value="8653858">0.008</td>
-              <td class="duration" data-value="8653858">0.008</td>
-              <td class="passed">100.00%</td>
+              <td class="duration" data-value="50030357398">50.030</td>
+              <td class="duration" data-value="50030357398">50.030</td>
+              <td class="duration" data-value="50030357398">50.030</td>
+              <td class="failed">0.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.waitTillPipelineIsInRunningState()</td>
               <td>1</td>
-              <td class="duration" data-value="39709231470">39.709</td>
-              <td class="duration" data-value="39709231470">39.709</td>
-              <td class="duration" data-value="39709231470">39.709</td>
+              <td class="duration" data-value="50085419327">50.085</td>
+              <td class="duration" data-value="50085419327">50.085</td>
+              <td class="duration" data-value="50085419327">50.085</td>
               <td class="passed">100.00%</td>
             </tr>
         </tbody>
@@ -255,9 +255,9 @@ $(document).ready(function() {
           <tr>
             <td>17</td>
             <td>17</td>
-            <td class="duration">4.720</td>
-            <td class="duration">39.709</td>
-            <td class="duration">1:20.245</td>
+            <td class="duration">8.057</td>
+            <td class="duration">50.085</td>
+            <td class="duration">2:16.969</td>
             <td>Totals</td>
           </tr>
         </tfoot>
