deploy: 4b5f3dcbaafcbb78962144429fa21f78c676cfc3

--- a/cucumber-reports/refs/heads/develop/advanced-reports/cucumber-html-reports/overview-steps.html
+++ b/cucumber-reports/refs/heads/develop/advanced-reports/cucumber-html-reports/overview-steps.html
@@ -76,7 +76,7 @@ $(document).ready(function() {
     <tr class="info">
       <td>Cucumber Reports</td>
         <td>1</td>
-      <td>24 Nov 2021, 17:34</td>
+      <td>24 Nov 2021, 17:40</td>
     </tr>
   </tbody>
 </table>
@@ -116,138 +116,138 @@ $(document).ready(function() {
             <tr>
               <td class="location">BeforeActions.setUp(Scenario)</td>
               <td>1</td>
-              <td class="duration" data-value="1916753440">1.916</td>
-              <td class="duration" data-value="1916753440">1.916</td>
-              <td class="duration" data-value="1916753440">1.916</td>
+              <td class="duration" data-value="1675152655">1.675</td>
+              <td class="duration" data-value="1675152655">1.675</td>
+              <td class="duration" data-value="1675152655">1.675</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.closeTheBigQueryProperties()</td>
               <td>1</td>
-              <td class="duration" data-value="117474979">0.117</td>
-              <td class="duration" data-value="117474979">0.117</td>
-              <td class="duration" data-value="117474979">0.117</td>
-              <td class="passed">100.00%</td>
+              <td class="duration" data-value="188380">0.000</td>
+              <td class="duration" data-value="188380">0.000</td>
+              <td class="duration" data-value="188380">0.000</td>
+              <td class="failed">0.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.closeTheGCSProperties()</td>
               <td>1</td>
-              <td class="duration" data-value="147977865">0.147</td>
-              <td class="duration" data-value="147977865">0.147</td>
-              <td class="duration" data-value="147977865">0.147</td>
+              <td class="duration" data-value="153299492">0.153</td>
+              <td class="duration" data-value="153299492">0.153</td>
+              <td class="duration" data-value="153299492">0.153</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.deleteTheTable(String)</td>
               <td>1</td>
-              <td class="duration" data-value="683784483">0.683</td>
-              <td class="duration" data-value="683784483">0.683</td>
-              <td class="duration" data-value="683784483">0.683</td>
-              <td class="passed">100.00%</td>
+              <td class="duration" data-value="196735">0.000</td>
+              <td class="duration" data-value="196735">0.000</td>
+              <td class="duration" data-value="196735">0.000</td>
+              <td class="failed">0.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.enterTheBigQueryPropertiesForTable(String)</td>
               <td>1</td>
-              <td class="duration" data-value="4399667118">4.399</td>
-              <td class="duration" data-value="4399667118">4.399</td>
-              <td class="duration" data-value="4399667118">4.399</td>
-              <td class="passed">100.00%</td>
+              <td class="duration" data-value="102388957336">1:42.388</td>
+              <td class="duration" data-value="102388957336">1:42.388</td>
+              <td class="duration" data-value="102388957336">1:42.388</td>
+              <td class="failed">0.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.enterTheGCSPropertiesWithGCSBucket(String)</td>
               <td>1</td>
-              <td class="duration" data-value="15973202637">15.973</td>
-              <td class="duration" data-value="15973202637">15.973</td>
-              <td class="duration" data-value="15973202637">15.973</td>
+              <td class="duration" data-value="15917471124">15.917</td>
+              <td class="duration" data-value="15917471124">15.917</td>
+              <td class="duration" data-value="15917471124">15.917</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.getCountOfNoOfRecordsTransferredToBigQueryIn(String)</td>
               <td>1</td>
-              <td class="duration" data-value="876993117">0.876</td>
-              <td class="duration" data-value="876993117">0.876</td>
-              <td class="duration" data-value="876993117">0.876</td>
-              <td class="passed">100.00%</td>
+              <td class="duration" data-value="174594">0.000</td>
+              <td class="duration" data-value="174594">0.000</td>
+              <td class="duration" data-value="174594">0.000</td>
+              <td class="failed">0.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.linkSourceAndSinkToEstablishConnection()</td>
               <td>1</td>
-              <td class="duration" data-value="2342304446">2.342</td>
-              <td class="duration" data-value="2342304446">2.342</td>
-              <td class="duration" data-value="2342304446">2.342</td>
+              <td class="duration" data-value="2342316933">2.342</td>
+              <td class="duration" data-value="2342316933">2.342</td>
+              <td class="duration" data-value="2342316933">2.342</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.openDatafusionProjectToConfigurePipeline()</td>
               <td>1</td>
-              <td class="duration" data-value="3758529800">3.758</td>
-              <td class="duration" data-value="3758529800">3.758</td>
-              <td class="duration" data-value="3758529800">3.758</td>
+              <td class="duration" data-value="3754580395">3.754</td>
+              <td class="duration" data-value="3754580395">3.754</td>
+              <td class="duration" data-value="3754580395">3.754</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.openLogs()</td>
               <td>1</td>
-              <td class="duration" data-value="376660623">0.376</td>
-              <td class="duration" data-value="376660623">0.376</td>
-              <td class="duration" data-value="376660623">0.376</td>
-              <td class="passed">100.00%</td>
+              <td class="duration" data-value="174288">0.000</td>
+              <td class="duration" data-value="174288">0.000</td>
+              <td class="duration" data-value="174288">0.000</td>
+              <td class="failed">0.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.runThePipelineInRuntime()</td>
               <td>1</td>
-              <td class="duration" data-value="3274407726">3.274</td>
-              <td class="duration" data-value="3274407726">3.274</td>
-              <td class="duration" data-value="3274407726">3.274</td>
-              <td class="passed">100.00%</td>
+              <td class="duration" data-value="216065">0.000</td>
+              <td class="duration" data-value="216065">0.000</td>
+              <td class="duration" data-value="216065">0.000</td>
+              <td class="failed">0.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.saveAndDeployPipeline()</td>
               <td>1</td>
-              <td class="duration" data-value="3546195380">3.546</td>
-              <td class="duration" data-value="3546195380">3.546</td>
-              <td class="duration" data-value="3546195380">3.546</td>
-              <td class="passed">100.00%</td>
+              <td class="duration" data-value="156786">0.000</td>
+              <td class="duration" data-value="156786">0.000</td>
+              <td class="duration" data-value="156786">0.000</td>
+              <td class="failed">0.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.sourceIsGCSBucket()</td>
               <td>1</td>
-              <td class="duration" data-value="187271654">0.187</td>
-              <td class="duration" data-value="187271654">0.187</td>
-              <td class="duration" data-value="187271654">0.187</td>
+              <td class="duration" data-value="187915889">0.187</td>
+              <td class="duration" data-value="187915889">0.187</td>
+              <td class="duration" data-value="187915889">0.187</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.targetIsBigQuery()</td>
               <td>1</td>
-              <td class="duration" data-value="188871831">0.188</td>
-              <td class="duration" data-value="188871831">0.188</td>
-              <td class="duration" data-value="188871831">0.188</td>
+              <td class="duration" data-value="185193308">0.185</td>
+              <td class="duration" data-value="185193308">0.185</td>
+              <td class="duration" data-value="185193308">0.185</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.validateSuccessMessageIsDisplayed()</td>
               <td>1</td>
-              <td class="duration" data-value="25190677">0.025</td>
-              <td class="duration" data-value="25190677">0.025</td>
-              <td class="duration" data-value="25190677">0.025</td>
-              <td class="passed">100.00%</td>
+              <td class="duration" data-value="151833">0.000</td>
+              <td class="duration" data-value="151833">0.000</td>
+              <td class="duration" data-value="151833">0.000</td>
+              <td class="failed">0.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.verifyThePipelineStatusIs(String)</td>
               <td>1</td>
-              <td class="duration" data-value="7804945">0.007</td>
-              <td class="duration" data-value="7804945">0.007</td>
-              <td class="duration" data-value="7804945">0.007</td>
-              <td class="passed">100.00%</td>
+              <td class="duration" data-value="177909">0.000</td>
+              <td class="duration" data-value="177909">0.000</td>
+              <td class="duration" data-value="177909">0.000</td>
+              <td class="failed">0.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.waitTillPipelineIsInRunningState()</td>
               <td>1</td>
-              <td class="duration" data-value="29721601203">29.721</td>
-              <td class="duration" data-value="29721601203">29.721</td>
-              <td class="duration" data-value="29721601203">29.721</td>
-              <td class="passed">100.00%</td>
+              <td class="duration" data-value="168223">0.000</td>
+              <td class="duration" data-value="168223">0.000</td>
+              <td class="duration" data-value="168223">0.000</td>
+              <td class="failed">0.00%</td>
             </tr>
         </tbody>
 
@@ -255,9 +255,9 @@ $(document).ready(function() {
           <tr>
             <td>17</td>
             <td>17</td>
-            <td class="duration">3.973</td>
-            <td class="duration">29.721</td>
-            <td class="duration">1:7.544</td>
+            <td class="duration">7.447</td>
+            <td class="duration">1:42.388</td>
+            <td class="duration">2:6.606</td>
             <td>Totals</td>
           </tr>
         </tfoot>
