--- a/cucumber-reports/refs/heads/develop/advanced-reports/cucumber-html-reports/overview-steps.html
+++ b/cucumber-reports/refs/heads/develop/advanced-reports/cucumber-html-reports/overview-steps.html
@@ -76,7 +76,7 @@ $(document).ready(function() {
     <tr class="info">
       <td>Cucumber Reports</td>
         <td>1</td>
-      <td>24 Nov 2021, 17:40</td>
+      <td>24 Nov 2021, 17:45</td>
     </tr>
   </tbody>
 </table>
@@ -116,138 +116,138 @@ $(document).ready(function() {
             <tr>
               <td class="location">BeforeActions.setUp(Scenario)</td>
               <td>1</td>
-              <td class="duration" data-value="1675152655">1.675</td>
-              <td class="duration" data-value="1675152655">1.675</td>
-              <td class="duration" data-value="1675152655">1.675</td>
+              <td class="duration" data-value="1675370831">1.675</td>
+              <td class="duration" data-value="1675370831">1.675</td>
+              <td class="duration" data-value="1675370831">1.675</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.closeTheBigQueryProperties()</td>
               <td>1</td>
-              <td class="duration" data-value="188380">0.000</td>
-              <td class="duration" data-value="188380">0.000</td>
-              <td class="duration" data-value="188380">0.000</td>
-              <td class="failed">0.00%</td>
+              <td class="duration" data-value="116071845">0.116</td>
+              <td class="duration" data-value="116071845">0.116</td>
+              <td class="duration" data-value="116071845">0.116</td>
+              <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.closeTheGCSProperties()</td>
               <td>1</td>
-              <td class="duration" data-value="153299492">0.153</td>
-              <td class="duration" data-value="153299492">0.153</td>
-              <td class="duration" data-value="153299492">0.153</td>
+              <td class="duration" data-value="147508367">0.147</td>
+              <td class="duration" data-value="147508367">0.147</td>
+              <td class="duration" data-value="147508367">0.147</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.deleteTheTable(String)</td>
               <td>1</td>
-              <td class="duration" data-value="196735">0.000</td>
-              <td class="duration" data-value="196735">0.000</td>
-              <td class="duration" data-value="196735">0.000</td>
-              <td class="failed">0.00%</td>
+              <td class="duration" data-value="697563252">0.697</td>
+              <td class="duration" data-value="697563252">0.697</td>
+              <td class="duration" data-value="697563252">0.697</td>
+              <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.enterTheBigQueryPropertiesForTable(String)</td>
               <td>1</td>
-              <td class="duration" data-value="102388957336">1:42.388</td>
-              <td class="duration" data-value="102388957336">1:42.388</td>
-              <td class="duration" data-value="102388957336">1:42.388</td>
-              <td class="failed">0.00%</td>
+              <td class="duration" data-value="4414945745">4.414</td>
+              <td class="duration" data-value="4414945745">4.414</td>
+              <td class="duration" data-value="4414945745">4.414</td>
+              <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.enterTheGCSPropertiesWithGCSBucket(String)</td>
               <td>1</td>
-              <td class="duration" data-value="15917471124">15.917</td>
-              <td class="duration" data-value="15917471124">15.917</td>
-              <td class="duration" data-value="15917471124">15.917</td>
+              <td class="duration" data-value="15922331048">15.922</td>
+              <td class="duration" data-value="15922331048">15.922</td>
+              <td class="duration" data-value="15922331048">15.922</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.getCountOfNoOfRecordsTransferredToBigQueryIn(String)</td>
               <td>1</td>
-              <td class="duration" data-value="174594">0.000</td>
-              <td class="duration" data-value="174594">0.000</td>
-              <td class="duration" data-value="174594">0.000</td>
-              <td class="failed">0.00%</td>
+              <td class="duration" data-value="898663826">0.898</td>
+              <td class="duration" data-value="898663826">0.898</td>
+              <td class="duration" data-value="898663826">0.898</td>
+              <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.linkSourceAndSinkToEstablishConnection()</td>
               <td>1</td>
-              <td class="duration" data-value="2342316933">2.342</td>
-              <td class="duration" data-value="2342316933">2.342</td>
-              <td class="duration" data-value="2342316933">2.342</td>
+              <td class="duration" data-value="2343432823">2.343</td>
+              <td class="duration" data-value="2343432823">2.343</td>
+              <td class="duration" data-value="2343432823">2.343</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.openDatafusionProjectToConfigurePipeline()</td>
               <td>1</td>
-              <td class="duration" data-value="3754580395">3.754</td>
-              <td class="duration" data-value="3754580395">3.754</td>
-              <td class="duration" data-value="3754580395">3.754</td>
+              <td class="duration" data-value="3765731372">3.765</td>
+              <td class="duration" data-value="3765731372">3.765</td>
+              <td class="duration" data-value="3765731372">3.765</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.openLogs()</td>
               <td>1</td>
-              <td class="duration" data-value="174288">0.000</td>
-              <td class="duration" data-value="174288">0.000</td>
-              <td class="duration" data-value="174288">0.000</td>
-              <td class="failed">0.00%</td>
+              <td class="duration" data-value="395327823">0.395</td>
+              <td class="duration" data-value="395327823">0.395</td>
+              <td class="duration" data-value="395327823">0.395</td>
+              <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.runThePipelineInRuntime()</td>
               <td>1</td>
-              <td class="duration" data-value="216065">0.000</td>
-              <td class="duration" data-value="216065">0.000</td>
-              <td class="duration" data-value="216065">0.000</td>
-              <td class="failed">0.00%</td>
+              <td class="duration" data-value="3206107852">3.206</td>
+              <td class="duration" data-value="3206107852">3.206</td>
+              <td class="duration" data-value="3206107852">3.206</td>
+              <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.saveAndDeployPipeline()</td>
               <td>1</td>
-              <td class="duration" data-value="156786">0.000</td>
-              <td class="duration" data-value="156786">0.000</td>
-              <td class="duration" data-value="156786">0.000</td>
-              <td class="failed">0.00%</td>
+              <td class="duration" data-value="3551848889">3.551</td>
+              <td class="duration" data-value="3551848889">3.551</td>
+              <td class="duration" data-value="3551848889">3.551</td>
+              <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.sourceIsGCSBucket()</td>
               <td>1</td>
-              <td class="duration" data-value="187915889">0.187</td>
-              <td class="duration" data-value="187915889">0.187</td>
-              <td class="duration" data-value="187915889">0.187</td>
+              <td class="duration" data-value="203259930">0.203</td>
+              <td class="duration" data-value="203259930">0.203</td>
+              <td class="duration" data-value="203259930">0.203</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.targetIsBigQuery()</td>
               <td>1</td>
-              <td class="duration" data-value="185193308">0.185</td>
-              <td class="duration" data-value="185193308">0.185</td>
-              <td class="duration" data-value="185193308">0.185</td>
+              <td class="duration" data-value="191025104">0.191</td>
+              <td class="duration" data-value="191025104">0.191</td>
+              <td class="duration" data-value="191025104">0.191</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.validateSuccessMessageIsDisplayed()</td>
               <td>1</td>
-              <td class="duration" data-value="151833">0.000</td>
-              <td class="duration" data-value="151833">0.000</td>
-              <td class="duration" data-value="151833">0.000</td>
-              <td class="failed">0.00%</td>
+              <td class="duration" data-value="34526276">0.034</td>
+              <td class="duration" data-value="34526276">0.034</td>
+              <td class="duration" data-value="34526276">0.034</td>
+              <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.verifyThePipelineStatusIs(String)</td>
               <td>1</td>
-              <td class="duration" data-value="177909">0.000</td>
-              <td class="duration" data-value="177909">0.000</td>
-              <td class="duration" data-value="177909">0.000</td>
-              <td class="failed">0.00%</td>
+              <td class="duration" data-value="7853677">0.007</td>
+              <td class="duration" data-value="7853677">0.007</td>
+              <td class="duration" data-value="7853677">0.007</td>
+              <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.waitTillPipelineIsInRunningState()</td>
               <td>1</td>
-              <td class="duration" data-value="168223">0.000</td>
-              <td class="duration" data-value="168223">0.000</td>
-              <td class="duration" data-value="168223">0.000</td>
-              <td class="failed">0.00%</td>
+              <td class="duration" data-value="39664115603">39.664</td>
+              <td class="duration" data-value="39664115603">39.664</td>
+              <td class="duration" data-value="39664115603">39.664</td>
+              <td class="passed">100.00%</td>
             </tr>
         </tbody>
 
@@ -255,9 +255,9 @@ $(document).ready(function() {
           <tr>
             <td>17</td>
             <td>17</td>
-            <td class="duration">7.447</td>
-            <td class="duration">1:42.388</td>
-            <td class="duration">2:6.606</td>
+            <td class="duration">4.543</td>
+            <td class="duration">39.664</td>
+            <td class="duration">1:17.235</td>
             <td>Totals</td>
           </tr>
         </tfoot>
