--- a/cucumber-reports/develop/branch/advanced-reports/cucumber-html-reports/overview-steps.html
+++ b/cucumber-reports/develop/branch/advanced-reports/cucumber-html-reports/overview-steps.html
@@ -76,7 +76,7 @@ $(document).ready(function() {
     <tr class="info">
       <td>Cucumber Reports</td>
         <td>1</td>
-      <td>24 Nov 2021, 17:41</td>
+      <td>24 Nov 2021, 17:46</td>
     </tr>
   </tbody>
 </table>
@@ -116,138 +116,138 @@ $(document).ready(function() {
             <tr>
               <td class="location">BeforeActions.setUp(Scenario)</td>
               <td>1</td>
-              <td class="duration" data-value="1648586622">1.648</td>
-              <td class="duration" data-value="1648586622">1.648</td>
-              <td class="duration" data-value="1648586622">1.648</td>
+              <td class="duration" data-value="1666222802">1.666</td>
+              <td class="duration" data-value="1666222802">1.666</td>
+              <td class="duration" data-value="1666222802">1.666</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.closeTheBigQueryProperties()</td>
               <td>1</td>
-              <td class="duration" data-value="208319">0.000</td>
-              <td class="duration" data-value="208319">0.000</td>
-              <td class="duration" data-value="208319">0.000</td>
-              <td class="failed">0.00%</td>
+              <td class="duration" data-value="117863312">0.117</td>
+              <td class="duration" data-value="117863312">0.117</td>
+              <td class="duration" data-value="117863312">0.117</td>
+              <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.closeTheGCSProperties()</td>
               <td>1</td>
-              <td class="duration" data-value="156157336">0.156</td>
-              <td class="duration" data-value="156157336">0.156</td>
-              <td class="duration" data-value="156157336">0.156</td>
+              <td class="duration" data-value="149646904">0.149</td>
+              <td class="duration" data-value="149646904">0.149</td>
+              <td class="duration" data-value="149646904">0.149</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.deleteTheTable(String)</td>
               <td>1</td>
-              <td class="duration" data-value="256535">0.000</td>
-              <td class="duration" data-value="256535">0.000</td>
-              <td class="duration" data-value="256535">0.000</td>
-              <td class="failed">0.00%</td>
+              <td class="duration" data-value="668271509">0.668</td>
+              <td class="duration" data-value="668271509">0.668</td>
+              <td class="duration" data-value="668271509">0.668</td>
+              <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.enterTheBigQueryPropertiesForTable(String)</td>
               <td>1</td>
-              <td class="duration" data-value="102535448006">1:42.535</td>
-              <td class="duration" data-value="102535448006">1:42.535</td>
-              <td class="duration" data-value="102535448006">1:42.535</td>
-              <td class="failed">0.00%</td>
+              <td class="duration" data-value="4499237118">4.499</td>
+              <td class="duration" data-value="4499237118">4.499</td>
+              <td class="duration" data-value="4499237118">4.499</td>
+              <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.enterTheGCSPropertiesWithGCSBucket(String)</td>
               <td>1</td>
-              <td class="duration" data-value="16282403741">16.282</td>
-              <td class="duration" data-value="16282403741">16.282</td>
-              <td class="duration" data-value="16282403741">16.282</td>
+              <td class="duration" data-value="16342954184">16.342</td>
+              <td class="duration" data-value="16342954184">16.342</td>
+              <td class="duration" data-value="16342954184">16.342</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.getCountOfNoOfRecordsTransferredToBigQueryIn(String)</td>
               <td>1</td>
-              <td class="duration" data-value="264978">0.000</td>
-              <td class="duration" data-value="264978">0.000</td>
-              <td class="duration" data-value="264978">0.000</td>
-              <td class="failed">0.00%</td>
+              <td class="duration" data-value="940850757">0.940</td>
+              <td class="duration" data-value="940850757">0.940</td>
+              <td class="duration" data-value="940850757">0.940</td>
+              <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.linkSourceAndSinkToEstablishConnection()</td>
               <td>1</td>
-              <td class="duration" data-value="2347546142">2.347</td>
-              <td class="duration" data-value="2347546142">2.347</td>
-              <td class="duration" data-value="2347546142">2.347</td>
+              <td class="duration" data-value="2348831819">2.348</td>
+              <td class="duration" data-value="2348831819">2.348</td>
+              <td class="duration" data-value="2348831819">2.348</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.openDatafusionProjectToConfigurePipeline()</td>
               <td>1</td>
-              <td class="duration" data-value="3765013911">3.765</td>
-              <td class="duration" data-value="3765013911">3.765</td>
-              <td class="duration" data-value="3765013911">3.765</td>
+              <td class="duration" data-value="3771778163">3.771</td>
+              <td class="duration" data-value="3771778163">3.771</td>
+              <td class="duration" data-value="3771778163">3.771</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.openLogs()</td>
               <td>1</td>
-              <td class="duration" data-value="246685">0.000</td>
-              <td class="duration" data-value="246685">0.000</td>
-              <td class="duration" data-value="246685">0.000</td>
-              <td class="failed">0.00%</td>
+              <td class="duration" data-value="410432156">0.410</td>
+              <td class="duration" data-value="410432156">0.410</td>
+              <td class="duration" data-value="410432156">0.410</td>
+              <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.runThePipelineInRuntime()</td>
               <td>1</td>
-              <td class="duration" data-value="307363">0.000</td>
-              <td class="duration" data-value="307363">0.000</td>
-              <td class="duration" data-value="307363">0.000</td>
-              <td class="failed">0.00%</td>
+              <td class="duration" data-value="3204430602">3.204</td>
+              <td class="duration" data-value="3204430602">3.204</td>
+              <td class="duration" data-value="3204430602">3.204</td>
+              <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.saveAndDeployPipeline()</td>
               <td>1</td>
-              <td class="duration" data-value="156285">0.000</td>
-              <td class="duration" data-value="156285">0.000</td>
-              <td class="duration" data-value="156285">0.000</td>
-              <td class="failed">0.00%</td>
+              <td class="duration" data-value="3558473566">3.558</td>
+              <td class="duration" data-value="3558473566">3.558</td>
+              <td class="duration" data-value="3558473566">3.558</td>
+              <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.sourceIsGCSBucket()</td>
               <td>1</td>
-              <td class="duration" data-value="199700535">0.199</td>
-              <td class="duration" data-value="199700535">0.199</td>
-              <td class="duration" data-value="199700535">0.199</td>
+              <td class="duration" data-value="212039813">0.212</td>
+              <td class="duration" data-value="212039813">0.212</td>
+              <td class="duration" data-value="212039813">0.212</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.targetIsBigQuery()</td>
               <td>1</td>
-              <td class="duration" data-value="195883703">0.195</td>
-              <td class="duration" data-value="195883703">0.195</td>
-              <td class="duration" data-value="195883703">0.195</td>
+              <td class="duration" data-value="176254483">0.176</td>
+              <td class="duration" data-value="176254483">0.176</td>
+              <td class="duration" data-value="176254483">0.176</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.validateSuccessMessageIsDisplayed()</td>
               <td>1</td>
-              <td class="duration" data-value="248954">0.000</td>
-              <td class="duration" data-value="248954">0.000</td>
-              <td class="duration" data-value="248954">0.000</td>
-              <td class="failed">0.00%</td>
+              <td class="duration" data-value="32948820">0.032</td>
+              <td class="duration" data-value="32948820">0.032</td>
+              <td class="duration" data-value="32948820">0.032</td>
+              <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.verifyThePipelineStatusIs(String)</td>
               <td>1</td>
-              <td class="duration" data-value="266933">0.000</td>
-              <td class="duration" data-value="266933">0.000</td>
-              <td class="duration" data-value="266933">0.000</td>
-              <td class="failed">0.00%</td>
+              <td class="duration" data-value="7889502">0.007</td>
+              <td class="duration" data-value="7889502">0.007</td>
+              <td class="duration" data-value="7889502">0.007</td>
+              <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.waitTillPipelineIsInRunningState()</td>
               <td>1</td>
-              <td class="duration" data-value="306570">0.000</td>
-              <td class="duration" data-value="306570">0.000</td>
-              <td class="duration" data-value="306570">0.000</td>
-              <td class="failed">0.00%</td>
+              <td class="duration" data-value="29704780972">29.704</td>
+              <td class="duration" data-value="29704780972">29.704</td>
+              <td class="duration" data-value="29704780972">29.704</td>
+              <td class="passed">100.00%</td>
             </tr>
         </tbody>
 
@@ -255,9 +255,9 @@ $(document).ready(function() {
           <tr>
             <td>17</td>
             <td>17</td>
-            <td class="duration">7.478</td>
-            <td class="duration">1:42.535</td>
-            <td class="duration">2:7.133</td>
+            <td class="duration">3.988</td>
+            <td class="duration">29.704</td>
+            <td class="duration">1:7.812</td>
             <td>Totals</td>
           </tr>
         </tfoot>
