--- a/cucumber-reports/odp_changes/branch/advanced-reports/cucumber-html-reports/overview-steps.html
+++ b/cucumber-reports/odp_changes/branch/advanced-reports/cucumber-html-reports/overview-steps.html
@@ -76,7 +76,7 @@ $(document).ready(function() {
     <tr class="info">
       <td>Cucumber Reports</td>
         <td>1</td>
-      <td>27 Nov 2021, 10:02</td>
+      <td>29 Nov 2021, 08:43</td>
     </tr>
   </tbody>
 </table>
@@ -116,137 +116,137 @@ $(document).ready(function() {
             <tr>
               <td class="location">BeforeActions.setUp(Scenario)</td>
               <td>1</td>
-              <td class="duration" data-value="2012186748">2.012</td>
-              <td class="duration" data-value="2012186748">2.012</td>
-              <td class="duration" data-value="2012186748">2.012</td>
+              <td class="duration" data-value="2029579079">2.029</td>
+              <td class="duration" data-value="2029579079">2.029</td>
+              <td class="duration" data-value="2029579079">2.029</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.closeTheBigQueryProperties()</td>
               <td>1</td>
-              <td class="duration" data-value="117272858">0.117</td>
-              <td class="duration" data-value="117272858">0.117</td>
-              <td class="duration" data-value="117272858">0.117</td>
+              <td class="duration" data-value="137175160">0.137</td>
+              <td class="duration" data-value="137175160">0.137</td>
+              <td class="duration" data-value="137175160">0.137</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.closeTheGCSProperties()</td>
               <td>1</td>
-              <td class="duration" data-value="155162862">0.155</td>
-              <td class="duration" data-value="155162862">0.155</td>
-              <td class="duration" data-value="155162862">0.155</td>
+              <td class="duration" data-value="156230460">0.156</td>
+              <td class="duration" data-value="156230460">0.156</td>
+              <td class="duration" data-value="156230460">0.156</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.deleteTheTable(String)</td>
               <td>1</td>
-              <td class="duration" data-value="187784">0.000</td>
-              <td class="duration" data-value="187784">0.000</td>
-              <td class="duration" data-value="187784">0.000</td>
-              <td class="failed">0.00%</td>
+              <td class="duration" data-value="680996920">0.680</td>
+              <td class="duration" data-value="680996920">0.680</td>
+              <td class="duration" data-value="680996920">0.680</td>
+              <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.enterTheBigQueryPropertiesForTable(String)</td>
               <td>1</td>
-              <td class="duration" data-value="6043649049">6.043</td>
-              <td class="duration" data-value="6043649049">6.043</td>
-              <td class="duration" data-value="6043649049">6.043</td>
+              <td class="duration" data-value="5813226051">5.813</td>
+              <td class="duration" data-value="5813226051">5.813</td>
+              <td class="duration" data-value="5813226051">5.813</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.enterTheGCSPropertiesWithGCSBucket(String)</td>
               <td>1</td>
-              <td class="duration" data-value="14595646321">14.595</td>
-              <td class="duration" data-value="14595646321">14.595</td>
-              <td class="duration" data-value="14595646321">14.595</td>
+              <td class="duration" data-value="14598163743">14.598</td>
+              <td class="duration" data-value="14598163743">14.598</td>
+              <td class="duration" data-value="14598163743">14.598</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.getCountOfNoOfRecordsTransferredToBigQueryIn(String)</td>
               <td>1</td>
-              <td class="duration" data-value="230468">0.000</td>
-              <td class="duration" data-value="230468">0.000</td>
-              <td class="duration" data-value="230468">0.000</td>
-              <td class="failed">0.00%</td>
+              <td class="duration" data-value="853239310">0.853</td>
+              <td class="duration" data-value="853239310">0.853</td>
+              <td class="duration" data-value="853239310">0.853</td>
+              <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.linkSourceAndSinkToEstablishConnection()</td>
               <td>1</td>
-              <td class="duration" data-value="2350573940">2.350</td>
-              <td class="duration" data-value="2350573940">2.350</td>
-              <td class="duration" data-value="2350573940">2.350</td>
+              <td class="duration" data-value="2353360630">2.353</td>
+              <td class="duration" data-value="2353360630">2.353</td>
+              <td class="duration" data-value="2353360630">2.353</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.openDatafusionProjectToConfigurePipeline()</td>
               <td>1</td>
-              <td class="duration" data-value="3786938314">3.786</td>
-              <td class="duration" data-value="3786938314">3.786</td>
-              <td class="duration" data-value="3786938314">3.786</td>
+              <td class="duration" data-value="3776140927">3.776</td>
+              <td class="duration" data-value="3776140927">3.776</td>
+              <td class="duration" data-value="3776140927">3.776</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.openLogs()</td>
               <td>1</td>
-              <td class="duration" data-value="562505539">0.562</td>
-              <td class="duration" data-value="562505539">0.562</td>
-              <td class="duration" data-value="562505539">0.562</td>
+              <td class="duration" data-value="440487302">0.440</td>
+              <td class="duration" data-value="440487302">0.440</td>
+              <td class="duration" data-value="440487302">0.440</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.runThePipelineInRuntime()</td>
               <td>1</td>
-              <td class="duration" data-value="3199543888">3.199</td>
-              <td class="duration" data-value="3199543888">3.199</td>
-              <td class="duration" data-value="3199543888">3.199</td>
+              <td class="duration" data-value="3175103426">3.175</td>
+              <td class="duration" data-value="3175103426">3.175</td>
+              <td class="duration" data-value="3175103426">3.175</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.saveAndDeployPipeline()</td>
               <td>1</td>
-              <td class="duration" data-value="3557655251">3.557</td>
-              <td class="duration" data-value="3557655251">3.557</td>
-              <td class="duration" data-value="3557655251">3.557</td>
+              <td class="duration" data-value="3576890507">3.576</td>
+              <td class="duration" data-value="3576890507">3.576</td>
+              <td class="duration" data-value="3576890507">3.576</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.sourceIsGCSBucket()</td>
               <td>1</td>
-              <td class="duration" data-value="192832243">0.192</td>
-              <td class="duration" data-value="192832243">0.192</td>
-              <td class="duration" data-value="192832243">0.192</td>
+              <td class="duration" data-value="214908454">0.214</td>
+              <td class="duration" data-value="214908454">0.214</td>
+              <td class="duration" data-value="214908454">0.214</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.targetIsBigQuery()</td>
               <td>1</td>
-              <td class="duration" data-value="198635121">0.198</td>
-              <td class="duration" data-value="198635121">0.198</td>
-              <td class="duration" data-value="198635121">0.198</td>
+              <td class="duration" data-value="201062133">0.201</td>
+              <td class="duration" data-value="201062133">0.201</td>
+              <td class="duration" data-value="201062133">0.201</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.validateSuccessMessageIsDisplayed()</td>
               <td>1</td>
-              <td class="duration" data-value="213234">0.000</td>
-              <td class="duration" data-value="213234">0.000</td>
-              <td class="duration" data-value="213234">0.000</td>
-              <td class="failed">0.00%</td>
+              <td class="duration" data-value="27461693">0.027</td>
+              <td class="duration" data-value="27461693">0.027</td>
+              <td class="duration" data-value="27461693">0.027</td>
+              <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.verifyThePipelineStatusIs(String)</td>
               <td>1</td>
-              <td class="duration" data-value="50056183556">50.056</td>
-              <td class="duration" data-value="50056183556">50.056</td>
-              <td class="duration" data-value="50056183556">50.056</td>
-              <td class="failed">0.00%</td>
+              <td class="duration" data-value="8460578">0.008</td>
+              <td class="duration" data-value="8460578">0.008</td>
+              <td class="duration" data-value="8460578">0.008</td>
+              <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.waitTillPipelineIsInRunningState()</td>
               <td>1</td>
-              <td class="duration" data-value="50047863026">50.047</td>
-              <td class="duration" data-value="50047863026">50.047</td>
-              <td class="duration" data-value="50047863026">50.047</td>
+              <td class="duration" data-value="39735463689">39.735</td>
+              <td class="duration" data-value="39735463689">39.735</td>
+              <td class="duration" data-value="39735463689">39.735</td>
               <td class="passed">100.00%</td>
             </tr>
         </tbody>
@@ -255,9 +255,9 @@ $(document).ready(function() {
           <tr>
             <td>17</td>
             <td>17</td>
-            <td class="duration">8.051</td>
-            <td class="duration">50.056</td>
-            <td class="duration">2:16.877</td>
+            <td class="duration">4.575</td>
+            <td class="duration">39.735</td>
+            <td class="duration">1:17.777</td>
             <td>Totals</td>
           </tr>
         </tfoot>
